--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-Hello World! VitaminLabs presents: <a>https://play.google.com/store/apps/details?id=com.vitaminlabs.crosswords</a>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Hello World, from Vitamin Labs.!</title>
+</head>
+
+<body>
+
+  <h1>Hello World!</h1>
+
+  <p> Vitamin Labs. presents: <a href="https://play.google.com/store/apps/details?id=com.vitaminlabs.crosswords">CRO: Crosswords</a></p>
+
+</body>
+
+</html>
+
+
